k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: devops-platform
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
